# Auth

./: .env  .gitignore  DockerFile  docker-compose.yaml  pyproject.toml  requirements.txt
alembic/: env.py
app/: config.py  consts.py  db.py  main.py  security.py  validators.py
app/dto/: __init__.py  base_dto.py  signin_dto.py  signup_dto.py  token_dto.py
app/models/: __init__.py  base_model.py  token_model.py  user_model.py
app/test/: test_signin.py  test_signup.py
app/validators/: __init__.py  email_validator.py  password_validator.py  phone_number_validator.py
